@@ -1394,15 +1394,11 @@ class cmd_dh_make(Command):
     takes_args = ['package_name', 'version', 'tarball']
 
     bzr_only_opt = Option('bzr-only', help="Don't run dh_make.")
-    v3_opt = Option('v3', hidden=True)
 
-    takes_options = [bzr_only_opt, v3_opt]
+    takes_options = [bzr_only_opt]
 
-    def run(self, package_name, version, tarball, bzr_only=None, v3=None):
+    def run(self, package_name, version, tarball, bzr_only=None):
         from . import dh_make
-        if v3:
-            warning(gettext('The --v3 option has been deprecated. dh_make now '
-                            'creates format v3 packages by default.'))
         tree = dh_make.import_upstream(tarball, package_name,
             version.encode("utf-8"))
         if not bzr_only:
