@@ -6,6 +6,7 @@ brz-debian (2.8.9) UNRELEASED; urgency=medium
     packages. LP: #999586
   * Remove deprecated --result option for 'bzr builddeb'.
   * Remove deprecated export-upstream setting in configuation.
+  * Remove deprecated --v3 option from 'bzr dh-make'.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 17 Jun 2017 14:10:48 +0000
 
